apps/pgweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgweb
  template:
    metadata:
      labels:
        app: pgweb
    spec:
      containers:
        - name: pgweb
          image: sosedoff/pgweb:0.17.0
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
