apps/pgweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgweb
spec:
  selector:
    app: pgweb
  ports:
    - port: 8081
      targetPort: 8081
