apps/pgweb/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgweb
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pgweb.stadthagen.dev`)
      kind: Rule
      services:
        - name: pgweb
          port: 8081
  tls:
    secretName: stadthagen-tls
